reorganized modal style; fixed a layout bug on the modal;

--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,5 +1,40 @@
 @import (less) "../Theme/constants.css";
 
+.inline {
+  font-size: .875rem;
+  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
+  line-height: 1.5;
+  font-weight: 300;
+
+  @media (--small-viewport) {
+    height: 100%;
+  }
+}
+
+.modal {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.2s, z-index 0s 0.2s;
+
+  @media (--small-viewport) {
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+  }
+
+  .vanillaModal.modalVisible & {
+    z-index: 99;
+    opacity: 1;
+    transition: opacity 0.2s;
+  }
+}
+
 .inner {
   /* Relative positioning so overflow affects absolute children */
   position: relative;
@@ -13,9 +48,29 @@
   max-height: ~"calc(100% + 4px)";
   background: #f3f3f3 url('./assets/powered-by-onfido.svg') 50% ~"calc(100% - 20px)" no-repeat;
   border-radius: 3px;
+
   @media (--small-viewport) {
     width: 100%;
     height: 100%;
+  }
+
+  &, *, *:before, *:after {
+    box-sizing: border-box;
+  }
+
+  .modal & {
+    margin: auto;
+    z-index: -1;
+    opacity: 0;
+    transform: scale(0);
+    transition: opacity 0.2s, transform 0.2s, z-index 0s 0.2s;
+  }
+
+  .modalVisible .modal & {
+    z-index: 100;
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.2s, transform 0.2s;
   }
 }
 
@@ -27,67 +82,4 @@
   max-height: 100%;
   top: 50%;
   transform: translateY(-50%);
-}
-
-.inline {
-  @media (--small-viewport) {
-    height: 100%;
-  }
-}
-
-.inline {
-  font-size: .875rem;
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-  line-height: 1.5;
-  font-weight: 300;
-
-  @media (--small-viewport) {
-    height: 100%;
-  }
-
-  *, *:before, *:after {
-    box-sizing: border-box;
-  }
-}
-
-.modal {
-  .inner {
-    margin: auto;
-    z-index: -1;
-    opacity: 0;
-    transform: scale(0);
-    transition: opacity 0.2s, transform 0.2s, z-index 0s 0.2s;
-  }
-
-  .modalVisible & .inner {
-    z-index: 100;
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 0.2s, transform 0.2s;
-  }
-}
-
-.vanillaModal{
-  .modal {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: -1;
-    opacity: 0;
-    transition: opacity 0.2s, z-index 0s 0.2s;
-    @media (--small-viewport) {
-      padding-top: 3vw;
-      padding-bottom: 3vw;
-    }
-  }
-
-  &.modalVisible .modal {
-    z-index: 99;
-    opacity: 1;
-    transition: opacity 0.2s;
-  }
 }
